--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,5 +9,7 @@
 </div>
 
 <div class="actions" align="center">
-  <%= link_to 'Zaplecze', static_pages_paneladmina_path, class:'btn btn-primary' %>
+  <a class="btn btn-sm btn-primary btn-create" href="<%= static_pages_paneladmina_path %>">
+    <i class="fa fa-arrow-circle-left"></i> Zaplecze
+  </a>
 </div><br/>
