--- a/app/views/zgloszenies/_form.html.erb
+++ b/app/views/zgloszenies/_form.html.erb
@@ -87,12 +87,13 @@
   <%= f.hidden_field :visible, :value => false %>
 </div>
 
-
   <div class="jumbotron">
             <div class="controls">
             <%= f.submit "Dodaj zgłoszenie", class:'btn btn-success' %>
             <%= link_to 'Pokaż', @zgloszeny, class: "btn btn-primary" %>
-            <%= link_to 'Wróć', zgloszenies_path, class: "btn btn-danger" %>
+            <a class="btn btn-sm btn-primary btn-create" href="<%= zgloszenies_path %>">
+              <i class="fa fa-arrow-circle-left"></i> Zaplecze
+            </a>
           </p>
             </div>
           </div>
