--- a/app/views/dzials/index.html.erb
+++ b/app/views/dzials/index.html.erb
@@ -10,6 +10,10 @@
 
 
 <div class="actions" align="center">
-  <%= link_to 'Dodaj dział', new_dzial_path, class:'btn btn-sm btn-primary btn-create' %>
-  <%= link_to 'Zaplecze', static_pages_paneladmina_path, class:'btn btn-sm btn-primary btn-create' %>
+  <a class="btn btn-sm btn-primary btn-create" href="<%= new_dzial_path %>">
+    <i class="fa fa-plus-circle"></i> Dodaj dział
+  </a>
+  <a class="btn btn-sm btn-primary btn-create" href="<%= static_pages_paneladmina_path %>">
+    <i class="fa fa-arrow-circle-left"></i> Zaplecze
+  </a>
 </div><br/>
