--- a/app/views/zgloszenies/partials/_zgloszenies_table.html.erb
+++ b/app/views/zgloszenies/partials/_zgloszenies_table.html.erb
@@ -12,7 +12,6 @@
               <th>Opis urzadzenia</th>
               <th>Wysyłka</th>
               <% if current_user.admin? %>
-              <th>Zrealizowane?</th>
               <th>User</th>
               <th>Pracownik</th>
               <% end %>
@@ -23,7 +22,8 @@
       </thead>
       <tbody>
       <% @zgloszenies.order("zrealizowane desc").each do |zgloszeny| %>
-<% if current_user.id == zgloszeny.user_id || current_user.admin? %>
+      <% if zgloszeny.zrealizowane != true %>
+      <% if current_user.id == zgloszeny.user_id || current_user.admin? %>
           <tr>
               <td data-label="L.p"><%= zgloszeny.id %></td>
               <td data-label="Dział"><%= Dzial.where(id:zgloszeny.dzial_id).pluck(:nazwa).last %></td>
@@ -39,18 +39,14 @@
               <td data-label="Nie">Nie</td>
               <% end %>
               <% if current_user.admin? %>
-              <% if zgloszeny.zrealizowane == true %>
-              <td data-label="Tak">Tak</td>
-              <% else %>
-              <td data-label="Nie">Nie</td>
-              <% end %>
               <td data-label="User"><%= User.where(id:zgloszeny.user_id).pluck(:first_name).last %></td>
               <% if zgloszeny.pracownikid.nil? %>
                 Brak
               <% else %>
                 <td data-label="Pracownik"><%= User.where(id:zgloszeny.pracownikid).pluck(:first_name).last %></td>
               <% end %>
-<% end %>
+              <% end %>
+              <% end %>
 
               <td><%= link_to 'Usuń', zgloszeny, method: :delete, data: { confirm: 'Jesteś pewny?' }, class:'btn btn-danger btn-xs' %></td>
               <td><%= link_to 'Pokaż', zgloszeny, class:'btn btn-warning btn-xs' %></td>
