--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,9 @@
           <%= link_to "Statystyki", static_pages_statystyki_path, class: 'navbar-brand' %>
         <% else %>
         <% end %>
-        <%= link_to "Wylogowanie", destroy_user_session_path, method: :get, class: 'navbar-brand' %>
+        <a class="navbar-brand" href="<%= destroy_user_session_path %>">
+          Wylogowanie <i class="fa fa-power-off "></i> 
+        </a>
         <% else %>
         <%= link_to "Logowanie", new_user_session_url, class: 'navbar-brand' %>
         <%= link_to "Rejestracja", new_user_registration_path, class: 'navbar-brand' %>
