--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,7 +4,7 @@
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 <%= devise_error_messages! %>
 <form role="form">
- <center><h2>Rejestracja</h2></center>
+ <h2>Rejestracja</h2>
  <hr class="colorgraph">
  <div class="row">
   <div class="col-xs-12 col-sm-6 col-md-6">
@@ -36,7 +36,7 @@
    </div>
   </div>
  </div>
- 
+
  <hr class="colorgraph">
  <div class="row">
   <div class="col-xs-12 col-md-6">
