--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -7,7 +7,7 @@
     <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
     <form role="form">
       <fieldset>
-        <center><h2>Zmień hasło</h2></center>
+        <h2>Zmień hasło</h2>
         <hr class="colorgraph">
         <div class="form-group">
         <% if @minimum_password_length %>
