--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -5,7 +5,7 @@
 <div class="row">
 <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
 <form role="form">
-<center><h2>Edycja konta</h2></center>
+<h2>Edycja konta</h2>
 <hr class="colorgraph">
 <div class="row">
 <div class="form-group">
