--- a/app/views/zgloszenies/index.html.erb
+++ b/app/views/zgloszenies/index.html.erb
@@ -9,19 +9,20 @@
   </div>
 </div><br/>
 
-<div class="actions">
+<p align="center">
   <a class="btn btn-sm btn-success btn-create" href="<%= new_zgloszeny_path %>">
     <i class="fa fa-plus-circle"></i> Dodaj Zgłoszenie
   </a>
   <a class="btn btn-sm btn-warning btn-create" href="<%= zgloszenies_path(@zgloszenies, format: "pdf") %>">
-    <i class="fa fa-file-pdf-o"></i> PDF
+    <i class="fa fa-file-pdf-o"></i> Generuj PDF
   </a>
   <a class="btn btn-sm btn-primary btn-create" href="<%= static_pages_zgloszeniazrealizowane_path %>">
-    <i class="fa fa-check-circle-o"></i> Zrealizowane
+    <i class="fa fa-check-circle-o"></i> Zrealizowane Zgłoszenia
   </a>
   <% if current_user.admin? %>
   <a class="btn btn-sm btn-danger btn-create" href="<%= static_pages_paneladmina_path %>">
     <i class="fa fa-arrow-circle-left"></i> Zaplecze
   </a>
   <% end %>
-</div><br/>
+</p>
+<br/>
