--- a/app/views/welcome_mailer/welcome_send.text.erb
+++ b/app/views/welcome_mailer/welcome_send.text.erb
@@ -1,9 +1,8 @@
-Welcome to example.com, <%= @user.first_name %>
+Witamy w naszym systemie, <%= @user.email %>
 ===============================================
+Dziekujemy za rejestracje w naszym systemie. Twoje hasło do konta <%= @user.password %>.
  
-You have successfully signed up to example.com,
-your username is: <%= @user.password %>.
+Zaloguj się do swojego konta, link: <%= @url %>.
  
-To login to the site, just follow this link: <%= @url %>.
- 
-Thanks for joining and have a great day!
+Pozdrawiamy
+Zespół Awaria!
