--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,341 +1,255 @@
-<!doctype html>
-<html>
-  <head>
-    <meta name="viewport" content="width=device-width" />
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Awaria</title>
-    <style>
-      /* -------------------------------------
-          GLOBAL RESETS
-      ------------------------------------- */
-      img {
-        border: none;
-        -ms-interpolation-mode: bicubic;
-        max-width: 100%; }
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- Designed by https://github.com/kaytcat -->
+  <!-- Robot header image designed by Freepik.com -->
 
-      body {
-        background-color: #f6f6f6;
-        font-family: sans-serif;
-        -webkit-font-smoothing: antialiased;
-        font-size: 14px;
-        line-height: 1.4;
-        margin: 0;
-        padding: 0; 
-        -ms-text-size-adjust: 100%;
-        -webkit-text-size-adjust: 100%; }
+  <style type="text/css">
 
-      table {
-        border-collapse: separate;
-        mso-table-lspace: 0pt;
-        mso-table-rspace: 0pt;
-        width: 100%; }
-        table td {
-          font-family: sans-serif;
-          font-size: 14px;
-          vertical-align: top; }
 
-      /* -------------------------------------
-          BODY & CONTAINER
-      ------------------------------------- */
 
-      .body {
-        background-color: #f6f6f6;
-        width: 100%; }
+  /*
+>>>>>>>>> CHANGING PROGRESS STEP IMAGES <<<<<<<<<<<<<<<
 
-      /* Set a max-width, and make it display as block so it will automatically stretch to that width, but will also shrink down on a phone or something */
-      .container {
-        display: block;
-        Margin: 0 auto !important;
-        /* makes it centered */
-        max-width: 580px;
-        padding: 10px;
-        width: 580px; }
+-If you would like to change the progress step images from 3 to any other step please view the html comments below.
+-You just need to switch the provided image url's.
 
-      /* This should also be a block element, so that it will fill 100% of the .container */
-      .content {
-        box-sizing: border-box;
-        display: block;
-        Margin: 0 auto;
-        max-width: 580px;
-        padding: 10px; }
 
-      /* -------------------------------------
-          HEADER, FOOTER, MAIN
-      ------------------------------------- */
-      .main {
-        background: #fff;
-        border-radius: 3px;
-        width: 100%; }
+*/
 
-      .wrapper {
-        box-sizing: border-box;
-        padding: 20px; }
 
-      .footer {
-        clear: both;
-        padding-top: 10px;
-        text-align: center;
-        width: 100%; }
-        .footer td,
-        .footer p,
-        .footer span,
-        .footer a {
-          color: #999999;
-          font-size: 12px;
-          text-align: center; }
 
-      /* -------------------------------------
-          TYPOGRAPHY
-      ------------------------------------- */
-      h1,
-      h2,
-      h3,
-      h4 {
-        color: #000000;
-        font-family: sans-serif;
-        font-weight: 400;
-        line-height: 1.4;
-        margin: 0;
-        Margin-bottom: 30px; }
 
-      h1 {
-        font-size: 35px;
-        font-weight: 300;
-        text-align: center;
-        text-transform: capitalize; }
 
-      p,
-      ul,
-      ol {
-        font-family: sans-serif;
-        font-size: 14px;
-        font-weight: normal;
-        margin: 0;
-        Margin-bottom: 15px; }
-        p li,
-        ul li,
-        ol li {
-          list-style-position: inside;
-          margin-left: 5px; }
+  @import url(http://fonts.googleapis.com/css?family=Droid+Sans);
 
-      a {
-        color: #3498db;
-        text-decoration: underline; }
+  /* Take care of image borders and formatting */
 
-      /* -------------------------------------
-          BUTTONS
-      ------------------------------------- */
-      .btn {
-        box-sizing: border-box;
-        width: 100%; }
-        .btn > tbody > tr > td {
-          padding-bottom: 15px; }
-        .btn table {
-          width: auto; }
-        .btn table td {
-          background-color: #ffffff;
-          border-radius: 5px;
-          text-align: center; }
-        .btn a {
-          background-color: #ffffff;
-          border: solid 1px #3498db;
-          border-radius: 5px;
-          box-sizing: border-box;
-          color: #3498db;
-          cursor: pointer;
-          display: inline-block;
-          font-size: 14px;
-          font-weight: bold;
-          margin: 0;
-          padding: 12px 25px;
-          text-decoration: none;
-          text-transform: capitalize; }
+  img {
+    max-width: 600px;
+    outline: none;
+    text-decoration: none;
+    -ms-interpolation-mode: bicubic;
+  }
 
-      .btn-primary table td {
-        background-color: #3498db; }
+  a {
+    text-decoration: none;
+    border: 0;
+    outline: none;
+    color: #ffffff;
+  }
 
-      .btn-primary a {
-        background-color: #3498db;
-        border-color: #3498db;
-        color: #ffffff; }
+  a img {
+    border: none;
+  }
 
-      /* -------------------------------------
-          OTHER STYLES THAT MIGHT BE USEFUL
-      ------------------------------------- */
-      .last {
-        margin-bottom: 0; }
+  /* General styling */
 
-      .first {
-        margin-top: 0; }
+  td, h1, h2, h3  {
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: 400;
+  }
 
-      .align-center {
-        text-align: center; }
+  td {
+    text-align: center;
+  }
 
-      .align-right {
-        text-align: right; }
+  body {
+    -webkit-font-smoothing:antialiased;
+    -webkit-text-size-adjust:none;
+    width: 100%;
+    height: 100%;
+    color: #37302d;
+    background: #ffffff;
+    font-size: 16px;
+  }
 
-      .align-left {
-        text-align: left; }
+   table {
+    border-collapse: collapse !important;
+  }
 
-      .clear {
-        clear: both; }
+  .headline {
+    color: #ffffff;
+    font-size: 36px;
+  }
 
-      .mt0 {
-        margin-top: 0; }
+ .force-full-width {
+  width: 100% !important;
+ }
 
-      .mb0 {
-        margin-bottom: 0; }
+ .step-width {
+  width: 110px;
+  height: 111px;
+ }
 
-      .preheader {
-        color: transparent;
-        display: none;
-        height: 0;
-        max-height: 0;
-        max-width: 0;
-        opacity: 0;
-        overflow: hidden;
-        mso-hide: all;
-        visibility: hidden;
-        width: 0; }
 
-      .powered-by a {
-        text-decoration: none; }
 
-      hr {
-        border: 0;
-        border-bottom: 1px solid #f6f6f6;
-        Margin: 20px 0; }
+  </style>
 
-      /* -------------------------------------
-          RESPONSIVE AND MOBILE FRIENDLY STYLES
-      ------------------------------------- */
-      @media only screen and (max-width: 620px) {
-        table[class=body] h1 {
-          font-size: 28px !important;
-          margin-bottom: 10px !important; }
-        table[class=body] p,
-        table[class=body] ul,
-        table[class=body] ol,
-        table[class=body] td,
-        table[class=body] span,
-        table[class=body] a {
-          font-size: 16px !important; }
-        table[class=body] .wrapper,
-        table[class=body] .article {
-          padding: 10px !important; }
-        table[class=body] .content {
-          padding: 0 !important; }
-        table[class=body] .container {
-          padding: 0 !important;
-          width: 100% !important; }
-        table[class=body] .main {
-          border-left-width: 0 !important;
-          border-radius: 0 !important;
-          border-right-width: 0 !important; }
-        table[class=body] .btn table {
-          width: 100% !important; }
-        table[class=body] .btn a {
-          width: 100% !important; }
-        table[class=body] .img-responsive {
-          height: auto !important;
-          max-width: 100% !important;
-          width: auto !important; }}
+  <style type="text/css" media="screen">
+      @media screen {
+         /*Thanks Outlook 2013! http://goo.gl/XLxpyl*/
+        td, h1, h2, h3 {
+          font-family: 'Droid Sans', 'Helvetica Neue', 'Arial', 'sans-serif' !important;
+        }
+      }
+  </style>
 
-      /* -------------------------------------
-          PRESERVE THESE STYLES IN THE HEAD
-      ------------------------------------- */
-      @media all {
-        .ExternalClass {
-          width: 100%; }
-        .ExternalClass,
-        .ExternalClass p,
-        .ExternalClass span,
-        .ExternalClass font,
-        .ExternalClass td,
-        .ExternalClass div {
-          line-height: 100%; }
-        .apple-link a {
-          color: inherit !important;
-          font-family: inherit !important;
-          font-size: inherit !important;
-          font-weight: inherit !important;
-          line-height: inherit !important;
-          text-decoration: none !important; } 
-        .btn-primary table td:hover {
-          background-color: #34495e !important; }
-        .btn-primary a:hover {
-          background-color: #34495e !important;
-          border-color: #34495e !important; } }
+  <style type="text/css" media="only screen and (max-width: 480px)">
+    /* Mobile styles */
+    @media only screen and (max-width: 480px) {
 
-    </style>
-  </head>
-  <body class="">
-    <table border="0" cellpadding="0" cellspacing="0" class="body">
-      <tr>
-        <td>&nbsp;</td>
-        <td class="container">
-          <div class="content">
+      table[class="w320"] {
+        width: 320px !important;
+      }
 
-            <!-- START CENTERED WHITE CONTAINER -->
-            <span class="preheader">This is preheader text. Some clients will show this text as a preview.</span>
-            <table class="main">
+      img[class="step-width"] {
+        width: 80px !important;
+        height: 81px !important;
+      }
 
-              <!-- START MAIN CONTENT AREA -->
-              <tr>
-                <td class="wrapper">
-                  <table border="0" cellpadding="0" cellspacing="0">
-                    <tr>
-                      <td>
-                        <p>Witaj, <%= @resource.email %>!</p>
-                        <table border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
-                          <tbody>
-                            <tr>
-                              <td align="left">
-                                <table border="0" cellpadding="0" cellspacing="0">
-                                  <tbody>
-                                    <tr>
-                                      <td><%= link_to 'Aktualizuj hasło', edit_password_url(@resource, reset_password_token: @token) %></td>
-                                    </tr>
-                                  </tbody>
-                                </table>
-                              </td>
-                            </tr>
-                          </tbody>
-                        </table><br/>
-                        <p>Drogi kliencie,</p> 
-                        <p>Informujesz nas, że nie pamiętasz hasła.	
+
+    }
+  </style>
+</head>
+<body class="body" style="padding:0; margin:0; display:block; background:#ffffff; -webkit-text-size-adjust:none" bgcolor="#ffffff">
+<table align="center" cellpadding="0" cellspacing="0" width="100%" height="100%" >
+  <tr>
+    <td align="center" valign="top" bgcolor="#ffffff"  width="100%">
+      <center>
+        <table style="margin: 0 auto;" cellpadding="0" cellspacing="0" width="600" class="w320">
+          <tr>
+            <td align="center" valign="top">
+
+                <table style="margin: 0 auto;" cellpadding="0" cellspacing="0" width="100%" style="margin:0 auto;">
+                  <tr>
+                    <td style="font-size: 30px; text-align:center;">
+                      <br>
+                        <strong>AWARIA</strong>
+                      <br>
+                      <br>
+                    </td>
+                  </tr>
+                </table>
+
+                <table style="margin: 0 auto;" cellpadding="0" cellspacing="0" width="100%" bgcolor="#4dbfbf">
+                  <tr>
+                    <td class="headline">
+                    <br>
+                      Witaj, <%= @resource.email %>!
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                    <br>
+                      <center>
+                        <table style="margin:0 auto;" cellspacing="0" cellpadding="0" class="force-width-80">
+                          <tr>
+
+
+
+                            <td>
+                            <!-- ======== STEP ONE ========= -->
+                            <!-- ==== Please use this url: https://www.filepicker.io/api/file/cdDaXwrhTd6EpvjpwqP1 in the src below in order to set the progress to one.
+
+                            Then replace step two with this url: https://www.filepicker.io/api/file/MD29ZQs3RdK7mSu0VqxZ
+
+
+                            Then replace step three with this url: https://www.filepicker.io/api/file/qnkuUNPS6TptLRIjWERA ==== -->
+                              <img class="step-width" src="https://www.filepicker.io/api/file/MMVdxAuqQuy7nqVEjmPV" alt="step one">
+                            </td>
+
+
+
+                            <!-- ======== STEP TWO ========= -->
+                            <!-- ==== Please use this url: https://www.filepicker.io/api/file/QKOMsiThQcePodddaOHk in the src below in order to set the progress to two.
+
+                            Then replace step three with this url: https://www.filepicker.io/api/file/qnkuUNPS6TptLRIjWERA
+
+                            Then replace step one with this url: https://www.filepicker.io/api/file/MMVdxAuqQuy7nqVEjmPV ==== -->
+                            <td>
+                              <img class="step-width" src="https://www.filepicker.io/api/file/MD29ZQs3RdK7mSu0VqxZ" alt="step two">
+                            </td>
+
+
+                            <!-- ======== STEP THREE ========= -->
+                            <!-- ==== Please use this url: https://www.filepicker.io/api/file/mepNOdHRTCMs1Jrcy2fU in the src below in order to set the progress to three.
+
+                            Then replace step one with this url: https://www.filepicker.io/api/file/MMVdxAuqQuy7nqVEjmPV
+
+                            Then replace step two with this url: https://www.filepicker.io/api/file/MD29ZQs3RdK7mSu0VqxZ ==== -->
+                            <td>
+                              <img class="step-width" src="https://www.filepicker.io/api/file/mepNOdHRTCMs1Jrcy2fU" alt="step three">
+                            </td>
+                          </tr>
+
+
+                          <tr>
+                            <td style="vertical-align:top; color:#187272; font-weight:bold;">
+                              One
+                            </td>
+                            <td style="vertical-align:top; color:#187272; font-weight:bold;">
+                              Two
+                            </td>
+                            <td style="vertical-align:top; color:#187272; font-weight:bold;">
+                              Done!
+                            </td>
+                          </tr>
+                        </table>
+                      </center>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+
+                      <center>
+                        <table style="margin: 0 auto;" cellpadding="0" cellspacing="0" width="60%">
+                          <tr>
+                            <td style="color:#187272;">
+                            <br>
+                            <br>
+                             <p>Drogi kliencie,</p> 
+                        <p>Informujesz nas, że nie pamiętasz hasła. 
 Aby odzyskać dostęp do swojego konta, kliknij aktualizuj hasło.</p>
                         <p>Pozdrawiamy</p> 
-                                <p>Zespół Awaria!</p>
-                      </td>
-                    </tr>
-                  </table>
-                </td>
-              </tr>
+                        <p>Zespół Awaria!</p>
+                            <br>
+                            <br>
+                            </td>
+                          </tr>
+                        </table>
+                      </center>
 
-              <!-- END MAIN CONTENT AREA -->
-              </table>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <div><!--[if mso]>
+                        <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="http://" style="height:50px;v-text-anchor:middle;width:200px;" arcsize="8%" stroke="f" fillcolor="#178f8f">
+                          <w:anchorlock/>
+                          <center>
+                        <![endif]-->
+                            <a href="http://"
+                      style="background-color:#178f8f;border-radius:4px;color:#ffffff;display:inline-block;font-family:Helvetica, Arial, sans-serif;font-size:16px;font-weight:bold;line-height:50px;text-align:center;text-decoration:none;width:200px;-webkit-text-size-adjust:none;"><%= link_to 'ZMIANA HASŁA', edit_password_url(@resource, reset_password_token: @token) %></a>
+                        <!--[if mso]>
+                          </center>
+                        </v:roundrect>
+                      <![endif]--></div>
+                      <br>
+                      <br>
+                    </td>
+                  </tr>
+                </table>
 
-            <!-- START FOOTER -->
-            <div class="footer">
-              <table border="0" cellpadding="0" cellspacing="0">
-                <tr>
-                  <td class="content-block">
-                    <span class="apple-link">AWARIA</span>
-                    <br> Don't like these emails? <a href="http://i.imgur.com/CScmqnj.gif">Unsubscribe</a>.
-                  </td>
-                </tr>
-                <tr>
-                </tr>
-              </table>
-            </div>
-
-            <!-- END FOOTER -->
-            
-<!-- END CENTERED WHITE CONTAINER --></div>
-        </td>
-        <td>&nbsp;</td>
-      </tr>
-    </table>
-  </body>
+                
+                  <tr>
+                    <td style="color:#bbbbbb; font-size:12px;">
+                       © 2014 All Rights Reserved
+                       <br>
+                       <br>
+                    </td>
+                  </tr>
+</body>
 </html>
