--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -212,7 +212,7 @@
                             <br>
                              <p>Drogi kliencie,</p> 
                         <p>Informujesz nas, że nie pamiętasz hasła. 
-Aby odzyskać dostęp do swojego konta, kliknij aktualizuj hasło.</p>
+Aby odzyskać dostęp do swojego konta, kliknij w link zmiana hasła.</p>
                         <p>Pozdrawiamy</p> 
                         <p>Zespół Awaria!</p>
                             <br>
