--- a/app/views/welcome_mailer/welcome_send.html.erb
+++ b/app/views/welcome_mailer/welcome_send.html.erb
@@ -118,7 +118,7 @@
                   </tr>
                   <tr>
                     <td class="headline">
-                      Witaj! <%= @user.email %>
+                      Witaj <%= @user.email %> !
                     </td>
                   </tr>
                   <tr>
