--- a/app/views/zgloszenies/partials/_zgloszenies_table.html.erb
+++ b/app/views/zgloszenies/partials/_zgloszenies_table.html.erb
@@ -41,6 +41,8 @@
               <% if current_user.admin? %>
               <td data-label="User"><%= User.where(id:zgloszeny.user_id).pluck(:first_name).last %></td>
               <% if zgloszeny.pracownikid.nil? %>
+                <td data-label="Brak">Brak</td>
+              <% else %>
                 <td data-label="Pracownik"><%= User.where(id:zgloszeny.pracownikid).pluck(:first_name).last %></td>
               <% end %>
               <% end %>
