--- a/app/views/stanowiskos/index.html.erb
+++ b/app/views/stanowiskos/index.html.erb
@@ -10,7 +10,7 @@
 
 <div class="actions" align="center">
   <a class="btn btn-sm btn-primary btn-create" href="<%= new_stanowisko_path %>">
-    <i class="fa fa-plus-circle"></i> Dodaj stanowsko
+    <i class="fa fa-plus-circle"></i> Dodaj stanowisko
   </a>
   <a class="btn btn-sm btn-primary btn-create" href="<%= static_pages_paneladmina_path %>">
     <i class="fa fa-arrow-circle-left"></i> Zaplecze
