--- a/app/views/dzials/_form.html.erb
+++ b/app/views/dzials/_form.html.erb
@@ -20,8 +20,8 @@
 
 <div class="jumbotron">
 <div class="actions">
-             <%= f.submit "Dodaj Dział", class: "btn btn-success" %>
-             <%= link_to 'Wróć', dzials_path, class: "btn btn-primary" %>
+             <%= f.submit "Dodaj Dział", class: "btn btn-sm btn-success btn-create" %>
+             <%= link_to 'Wróć', dzials_path, class: "btn btn-sm btn-primary btn-create" %>
           </div>
 <% end %><br />
 </div>
