--- a/app/views/stanowiskos/_form.html.erb
+++ b/app/views/stanowiskos/_form.html.erb
@@ -20,9 +20,9 @@
 
 <div class="jumbotron">
 <div class="actions">
-            <%= f.submit "Dodaj", class: "btn btn-success"%>
-            <%= link_to 'Pokaż', @stanowisko, class: "btn btn-primary" %>
-            <%= link_to 'Wróć', stanowiskos_path, class: "btn btn-success" %>
+            <%= f.submit "Dodaj", class: "btn btn-sm btn-success btn-create"%>
+            <%= link_to 'Pokaż', @stanowisko, class: "btn btn-sm btn-primary btn-create" %>
+            <%= link_to 'Wróć', stanowiskos_path, class: "btn btn-sm btn-danger btn-create" %>
             </div>
 <% end %><br />
 </div>
