--- a/app/views/zgloszenie_aktywnoscs/_form.html.erb
+++ b/app/views/zgloszenie_aktywnoscs/_form.html.erb
@@ -25,9 +25,9 @@
 
 <div class="jumbotron">
   <div class="actions">
-            <%= f.submit "Dodaj", class:'btn btn-success' %>
-            <%= link_to 'Pokaż', @zgloszenie_aktywnosc, class: "btn btn-primary" %>
-            <%= link_to 'Wróć', zgloszenie_aktywnoscs_path, class: "btn btn-danger" %>
+            <%= f.submit "Dodaj", class:'btn btn-sm btn-success btn-create' %>
+            <%= link_to 'Pokaż', @zgloszenie_aktywnosc, class: "btn btn-sm btn-primary btn-create" %>
+            <%= link_to 'Wróć', zgloszenie_aktywnoscs_path, class: "btn btn-sm btn-danger btn-create" %>
             </div>
 <% end %><br />
 </div>
