--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -400,17 +400,12 @@ text-transform: uppercase;
 font-size: 20px;
 font-weight: 600;
 }
-.jumbotron .btn{
+.jumbotron .form-group .btn-create{
 font-family: 'roboto';
-display: block;
-list-style: none;
-margin: 0;
-padding: 0;
-margin-top: 5px;
-margin-left: 5px;
-margin-right: 5px;
+margin-top: 15px;
+margin-left: auto;
+margin-right: auto;
 text-transform: uppercase;
-font-size: 15px;
 }
 }
 
