--- a/app/views/static_pages/paneladmina.html.erb
+++ b/app/views/static_pages/paneladmina.html.erb
@@ -15,11 +15,11 @@
 <% if current_user.admin? %>
 <div class="jumbotron">
 <p align="center">
- <%= link_to 'Użytkownicy', users_path, class:'btn btn-primary' %>
- <%= link_to 'Stanowiska', stanowiskos_path, class:'btn btn-primary' %>
- <%= link_to 'Działy', dzials_path, class:'btn btn-primary' %>
- <%= link_to 'Zgłoszenia', zgloszenies_path, class:'btn btn-primary' %>
- <%= link_to 'Zgłoszenia - Aktywności', zgloszenie_aktywnoscs_path, class:'btn btn-primary' %>
+ <%= link_to 'Użytkownicy', users_path, class:'btn btn-sm btn-primary btn-create' %>
+ <%= link_to 'Stanowiska', stanowiskos_path, class:'btn btn-sm btn-primary btn-create' %>
+ <%= link_to 'Działy', dzials_path, class:'btn btn-sm btn-primary btn-create' %>
+ <%= link_to 'Zgłoszenia', zgloszenies_path, class:'btn btn-sm btn-primary btn-create' %>
+ <%= link_to 'Zgłoszenia - Aktywności', zgloszenie_aktywnoscs_path, class:'btn btn-sm btn-primary btn-create' %>
 </p>
 </div>
 <% else %>
