--- a/app/views/static_pages/paneladmina.html.erb
+++ b/app/views/static_pages/paneladmina.html.erb
@@ -19,7 +19,7 @@
  <%= link_to 'Stanowiska', stanowiskos_path, class:'btn btn-sm btn-primary btn-create' %>
  <%= link_to 'Działy', dzials_path, class:'btn btn-sm btn-primary btn-create' %>
  <%= link_to 'Zgłoszenia', zgloszenies_path, class:'btn btn-sm btn-primary btn-create' %>
- <%= link_to 'Zgłoszenia - Aktywności', zgloszenie_aktywnoscs_path, class:'btn btn-sm btn-primary btn-create' %>
+ <%= link_to 'Zgłoszenia.akt', zgloszenie_aktywnoscs_path, class:'btn btn-sm btn-primary btn-create' %>
 </p>
 </div>
 <% else %>
