--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -43,7 +43,9 @@
 <%= f.submit "Aktualizuj", class:'btn btn-success btn-block btn-lg' %>
 </div></div><% end %>
 <div class="col-xs-12 col-md-6">
+<div class="form-group">
 <%= button_to "Usuń konto", registration_path(resource_name), data: { confirm: "Jesteś pewny?" }, method: :delete, class:'btn btn-danger btn-block btn-lg' %>
+</div>
 </div>
 </div></br>
 </form>
