--- a/app/views/zgloszenies/_form.html.erb
+++ b/app/views/zgloszenies/_form.html.erb
@@ -17,7 +17,8 @@
   <div>
 
             <% if zgloszeny.visible? %>
-            <label class="control-label"  for="username">ID użytkownika</label>
+            <div class="control-group">
+            <label class="control-label"  for="username"><h5>ID użytkownika</h5></label>
             <div class="controls">
               <%= f.text_field :user_id, :value => current_user.id ,:readonly => true, class:"form-control" %><br>
               <% end %>
@@ -88,7 +89,7 @@
 </div>
 
   <div class="jumbotron">
-            <%= f.submit "Dodaj zgłoszenie", class:'btn btn-sm btn-success btn-create' %>
+            <%= f.submit "Dodaj", class:'btn btn-sm btn-success btn-create' %>
             <%= link_to 'Pokaż', @zgloszeny, class: "btn btn-sm btn-primary btn-create" %>
             <a class="btn btn-sm btn-primary btn-create" href="<%= zgloszenies_path %>">
               <i class="fa fa-arrow-circle-left"></i> Zaplecze
