--- a/app/views/dzials/show.html.erb
+++ b/app/views/dzials/show.html.erb
@@ -16,8 +16,8 @@
   <th><%= @dzial.nazwa %></th>
   </p></h4><br/>
 
-  <%= link_to 'Edytuj', edit_dzial_path(@dzial), class: "btn btn-primary" %>
-<%= link_to 'Wróć', dzials_path, class: "btn btn-success" %>
+  <%= link_to 'Edytuj', edit_dzial_path(@dzial), class: "btn btn-sm btn-primary btn-create" %>
+<%= link_to 'Wróć', dzials_path, class: "btn btn-sm btn-success btn-create" %>
                            
                         </p>
                     </div>
