--- a/app/views/stanowiskos/show.html.erb
+++ b/app/views/stanowiskos/show.html.erb
@@ -13,8 +13,8 @@
               <strong>Nazwa:</strong>
               <%= @stanowisko.nazwa %>
               </p></h4><br/>
-              <%= link_to 'Edytuj', edit_stanowisko_path(@stanowisko), class: "btn btn-primary" %>
-              <%= link_to 'Wróć', stanowiskos_path, class: "btn btn-success" %>
+              <%= link_to 'Edytuj', edit_stanowisko_path(@stanowisko), class: "btn btn-sm btn-primary btn-create" %>
+              <%= link_to 'Wróć', stanowiskos_path, class: "btn btn-sm btn-success btn-create" %>
               </p>
           </div>
       </div>
