--- a/app/views/zgloszenie_aktywnoscs/show.html.erb
+++ b/app/views/zgloszenie_aktywnoscs/show.html.erb
@@ -18,8 +18,8 @@
   <%= @zgloszenie_aktywnosc.tresc %>
 </p></h4><br />
 
-<%= link_to 'Edytuj', edit_zgloszenie_aktywnosc_path(@zgloszenie_aktywnosc), class: "btn btn-primary" %>
-<%= link_to 'Wróć', zgloszenie_aktywnoscs_path , class: "btn btn-success" %>
+<%= link_to 'Edytuj', edit_zgloszenie_aktywnosc_path(@zgloszenie_aktywnosc), class: "btn btn-sm btn-primary btn-create" %>
+<%= link_to 'Wróć', zgloszenie_aktywnoscs_path , class: "btn btn-sm btn-success btn-create" %>
                         </p>
                     </div>
                 </div>
