--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -72,7 +72,7 @@ body { padding-top: 20px; }
 }
 .input-group .SearchBar{
   text-transform: uppercase;
-  font-size: 13px;
+  font-size: 10px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 10px;
@@ -281,7 +281,7 @@ font-size: 15px;
     font-size: 15px;
   }
   .control-group h5{
-    font-size: 17px;
+    font-size: 15px;
   }
 }
 .well well-sm h4{
@@ -407,7 +407,7 @@ font-family: 'roboto';
 .jumbotron .btn{
 font-family: roboto;
 margin-top: 5px;
-font-size: 18px;
+font-size: 15px;
 }
 
 @media all and (max-width:769px) {
@@ -458,11 +458,11 @@ font-size: 15px;
 font-weight: 200px;
 }
 .h1{
-font-size: 18px;
+font-size: 15px;
 
 }
 .h2{
-font-size: 17px;
+font-size: 15px;
 }}
 
 @media all and (max-width:769px) {
@@ -485,7 +485,7 @@ margin-bottom: 5px;
 @media all and (max-width:769px) {
 .field {
   text-align: center;
-  font-size: 20px;
+  font-size: 15px;
 }
 }
 
@@ -539,8 +539,8 @@ margin-bottom: 10px;
 
 @media all and (max-width:769px) {
 .container .img-responsive{
-margin-right: 5px;
-margin-left: 5px;
+margin-right: auto;
+margin-left: auto;
 margin-top: 5px;
 margin-bottom: 5px;
 text-align: center;
@@ -768,13 +768,13 @@ text-align: center;
     margin-bottom: 20px;
     margin-right: auto;
     margin-left: auto;
-    font-size: 20px;
+    font-size: 15px;
   }
   .form-group .input-lg{
     text-transform: uppercase;
-    font-size: 20px;
-    margin-top: 25px;
-    margin-bottom: 25px;
+    font-size: 15px;
+    margin-top: 20px;
+    margin-bottom: 20px;
   }
   h2{
     text-transform: uppercase;
