--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -405,7 +405,7 @@ font-weight: 700px;
 font-family: 'roboto';
 }
 .jumbotron .btn{
-font-family: roboto;
+font-family: 'roboto';
 margin-top: 5px;
 font-size: 15px;
 }
