--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -778,6 +778,7 @@ text-align: center;
   }
   h2{
     text-transform: uppercase;
+    font-size: 17px;
   }
    .button-checkbox .btn{
     text-transform: uppercase;
