--- a/app/views/users/partials/_users_table.html.erb
+++ b/app/views/users/partials/_users_table.html.erb
@@ -38,7 +38,7 @@
                     <% else %>
                     <td data-label="Nie">Nie</td>
                     <% end %>
-                    <td data-label="Utworzony"><%= user.created_at %></td>
+                    <td data-label="Utworzony"><%= user.created_at.strftime("%Y-%m-%d") %></td>
                     <td><%= link_to "Edytuj", edit_user_path(user), class:'btn btn-default btn-xs'%></td>
 <td><%= link_to "Admin", grantadmin_user_path(user), method: :grantadmin, data: { confirm: "Jesteś pewny?" }, class:'btn btn-success btn-xs'%></td>
 <td><%= link_to "Usuń", user_path(user), method: :delete, data: { confirm: "Jesteś pewny?" }, class:'btn btn-danger btn-xs' %></td>
