--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -784,3 +784,8 @@ text-align: center;
     text-transform: uppercase;
   }
 }
+
+/* przyciski pod tabelka */
+.actions .btn-create{
+  margin-top: 10px;
+}
