--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
 </div>
 <br>
 <nav class="navbar navbar-default">
-  <div class="container">
+  <div class="container-fluid">
     <div class="navbar-header">
       <%= link_to "Strona Główna", unauthenticated_root_path, class: 'navbar-brand' %>
       <% if user_signed_in? %>
