--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <%= csrf_meta_tags %>
     <%= content_for?(:head) ? yield(:head) : '' %>
-    <%= javascript_include_tag "application" %>
+    <%= javascript_include_tag 'application', async: true %>
     <%= stylesheet_link_tag    'application', media: 'all'%>
     <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
   </head>
