--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,15 @@
 <html>
   <head>
     <title>Awaria <%= yield(:title) %></title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <%= csrf_meta_tags %>
+     <meta name="google" value="notranslate">
     <%= content_for?(:head) ? yield(:head) : '' %>
     <%= javascript_include_tag "application", "data-turbolinks-track" => true, async: true %>
     <%= stylesheet_link_tag    'application', media: 'all'%>
     <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
+    <%= csrf_meta_tags %>
   </head>
   <body>
     <%= render 'layouts/header' %>
