--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
      <meta name="google" value="notranslate">
     
     <%= content_for?(:head) ? yield(:head) : '' %>
-    <%= javascript_include_tag "application", "data-turbolinks-track" => true, async: true, <%= javascript_include_tag "application" , async: true, cache: true %>
+    <%= javascript_include_tag "application", "data-turbolinks-track" => true, async: true %>
     <%= stylesheet_link_tag    'application', media: 'all'%>
     <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
     <%= csrf_meta_tags %>
