--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -18,7 +18,7 @@
         </div>
       </div>
       <div class="form-group">
-        <%= f.email_field :email, autofocus: true, class:"form-control input-lg", placeholder: "Email" %>
+        <%= f.email_field :email, class:"form-control input-lg", placeholder: "Email" %>
       </div>
       <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-6">
